<resources>
    <string name="app_name">SolCalc</string>
    <string name="batteries">Include Batteries?</string>
    <string name="get_estimate">Get Estimate</string>
    <string name="c_name">Name</string>
    <string name="c_addr">Address</string>
    <string name="click_below">Okay, all set. Click below to get your estimate</string>
    <string name="percent_cut">Percentage to Cut Bill By</string>
    <string-array name="battery_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="calc">Calculator</string>
    <string name="calc_bold">CALCULATOR</string>
    <string name="c_bill">Highest Recorded/Avg. Light Bill</string>
    <string name="total_system_cost">TOTAL SYSTEM COST</string>
    <string name="includes_labour">*includes labour cost</string>
    <string name="client_email_label">Email</string>
    <string name="sys_app">A SYSAPP PRODUCTION</string>
    <string name="calc_prompt">Get your solar power estimates right now!</string>
    <string name="estimate_question">Here to get your estimate?</string>
    <string name="user_greeting">Hello User!</string>
    <string name="prev_estimate">Previous Estimates</string>
</resources>