<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="707dp"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@mipmap/ic_sun_foreground">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/ic_wave_foreground"
            android:orientation="vertical"
            android:backgroundTint="#ededed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/ic_wave_foreground"
                android:orientation="vertical"
                android:layout_marginTop="50dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/calc_prompt"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/calc_button"
                    android:layout_width="350dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/calc_bold"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/sys_app"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>