<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:background="@mipmap/ic_sun_foreground"
            android:contentDescription="" />

    </Toolbar>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="707dp"
        android:layout_marginTop="110dp"
        android:background="@color/orange"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/hello_label"
            android:layout_marginTop="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/user_greeting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/poppins_semibolditalic"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="154dp"
            tools:layout_editor_absoluteY="90dp"
            android:text="@string/estimate_question" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="609dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/layout_bg"
            android:columnCount="1"
            android:padding="30dp"
            android:rowCount="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/previous_estimate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/prev_estimate"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="154dp"
                tools:layout_editor_absoluteY="90dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="4dp"
                android:elevation="10dp"
                android:padding="30dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/ClientName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:ems="15"
                    android:inputType="textPersonName"
                    android:layout_marginTop="6dp"
                    android:text=""
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/client_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="3"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:text=""
                    android:textSize="17sp"
                    tools:ignore="GridLayout" />

                <TextView
                    android:id="@+id/client_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textShortMessage"
                    android:text=""
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:padding="30dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/ClientName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="6dp"
                    android:ems="15"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/client_address2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:text=""
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/client_total2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textShortMessage"
                    android:text=""
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:elevation="10dp"
                android:padding="30dp"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/ClientName3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:ems="15"
                    android:inputType="textPersonName"
                    android:textSize="17sp"
                    android:layout_marginTop="6dp"
                    android:text=""
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/client_address3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:text=""
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/client_total3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:inputType="textShortMessage"
                    android:text=""
                    android:textSize="17sp" />
            </androidx.cardview.widget.CardView>



        </GridLayout>

    </LinearLayout>

    <Button
        android:id="@+id/calc_button"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="595dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/calc_bold"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>